worked on list issues branch

--- a/module-6-starter/single-repo.html
+++ b/module-6-starter/single-repo.html
@@ -9,6 +9,12 @@
   <title>Git it Done</title>
 </head>
 
+<main>
+  <div id="issues-container" class="list-group">
+
+  </div>
+</main>
+
 <body class="flex-column min-100-vh">
   <header class="hero">
     <h1 class="app-title">Showing Issues for: <span id="repo-name"></span></h1>
@@ -24,7 +30,7 @@
   <main>
   
   </main>
-
+  <script src="./assets/js/single.js"></script>
 </body>
 
 </html>
