added css html and java

--- a/module-6-starter/index.html
+++ b/module-6-starter/index.html
@@ -30,6 +30,13 @@
           <button type="submit" class="btn">Get User</button>
         </form>
       </div>
+      <div class = "card">
+        <h3 class = "card-header text-uppercase">Search By Topic</h3>
+          <button class = "btn">JavaScript</button>
+          <button class = "btn">HTML</button>
+          <button class = "btn">CSS</button>
+        <div class = "card-body" id = "language=buttons"
+    </div>
     </div>
 
     <div class="col-12 col-md-8">
